--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -10,13 +10,15 @@
         "@babel/core": "^7.24.9",
         "@babel/node": "^7.24.8",
         "@babel/preset-env": "^7.24.8",
+        "@eslint/js": "^9.8.0",
         "@typescript-eslint/eslint-plugin": "^7.17.0",
         "@typescript-eslint/parser": "^7.17.0",
-        "eslint": "^8.57.0",
+        "eslint": "^9.8.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-jest": "^28.6.0",
         "globals": "^15.8.0",
-        "jest": "^29.7.0"
+        "jest": "^29.7.0",
+        "typescript-eslint": "^7.18.0"
     }
 }
